# kbkb

./: .gitignore  DESIGN.md  PLAN.md  README.md  pyproject.toml
cline_skill_obsidian_kb/: SKILL.md
cline_skill_obsidian_kb/scripts/: kb_client.py  kb_context.py  kb_read.py  kb_search.py
docs/: API_CONTRACT.md  CLINE_ENRICHMENT_TESTING.md  CPU_ONLY_ENRICHMENT_RESEARCH.md  CPU_ONLY_MODEL_SETUP.md  END_TO_END_WORKFLOW.md  FIRST_RUN_UX_REVIEW.md  LINUX_TOKEN_SETUP.md  OBSIDIAN_GRAPH_DEVELOPMENT.md  OPERATIONS.md  PRD.md  SECURITY.md  SETUP.md  TROUBLESHOOTING.md  USABILITY_80_PLAN.md  WINDOWS_OUTLOOK_SETUP.md  WINDOWS_SSH_KEY_SETUP.md
examples/: kb-api.service  linux-config.example.yaml  linux-config.fixture.yaml  run-kb-win-sync.bat  windows-config.example.yaml
kb_api/: __main__.py  config.py  contract.py  diagnostics.py  enrichment.py  enrichment_providers.py  fastapi_app.py  frontmatter.py  indexer.py  scanner.py  server.py  templates.py
kb_win_sync/: __main__.py  config.py  diagnostics.py  email_model.py  outlook.py  render.py  simple_yaml.py  state.py  sync.py  templates.py  text.py
tests/: test_api.py  test_api_contract.py  test_cli_usability.py  test_win_sync.py
tests/fixtures/vault/10_Notes/: project-note.md
tests/fixtures/vault/20_Emails/ProjectA/: 2026-05-19_0915__Synthetic_SSO__abc123.md
